--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Engida</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -58,8 +58,9 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Engida Lishan.</h1>
-            <h3> software developer mostly interseted in mobile app , web developer ( backend and front end developer) , 
-                <br>    <a class="smoothscroll" href="#about"></a> <br>
+            <h3> 
+               Enthuasiastic software engineer with years of exprience participating in the complete product developement lifecycle of successful launched application
+              and  mostly interseted in mobile app developement and complete web developement              <br>    <a class="smoothscroll" href="#about"></a> <br>
            <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -95,13 +96,16 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>
+            I am highly competent mobile application  developer, web developer and IT expert with more than four years of exprience developing with a wide range of 
+               tools for mobile application as well as web developement . i understand the mobile app project life cycle  in depth and am very capable at all aspect 
+               of developement from project planning to requierment gathering through to writing and testing code, creating documentation and support.              <h4>
+          <h4>  <p class="info">I am strong communicator, team player that able to motivate and engage teamsx <span>&bull;</span></p>
+
+              </h4>
+               
             </p>
+
 
             <div class="row">
 
@@ -186,8 +190,10 @@
          <div class="nine columns main-col">
 
             <p>
-               I am software developer mostly interseted in devops ,mobile app , front end designer 
-               as well as backend developer  
+           
+               Enthuasiastic software engineer with 4 years of exprience participating in the complete product developement lifecycle of successful launched application
+               I am   on devops , mobile UI design and cross paltform mobile app developement,
+               as well as backend developer . 
             </p>
 
 				<div class="bars">
