--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="./cv/CV engida .pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="./cv/CV engida .pdf" class="button"><i class="fa fa-download"></i>Download CV</a>
                   </p>
                </div>
 
