--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <h2>About Me</h2>
 
             <p>
-            I am highly competent mobile application  developer, web developer and IT expert with more than four years of exprience developing with a wide range of 
+            I am  competent mobile application  developer, web developer and IT expert with more than four years of exprience developing with a wide range of 
                tools for mobile application as well as web developement . i understand the mobile app project life cycle  in depth and am very capable at all aspect 
                of developement from project planning to requierment gathering through to writing and testing code, creating documentation and support.              <h4>
-          <h4>  <p class="info">I am strong communicator, team player that able to motivate and engage teamsx <span>&bull;</span></p>
+          <h4>  <p class="info">I am strong communicator and  team player that able to motivate and engage team <span>&bull;</span></p>
 
               </h4>
                
@@ -186,12 +186,12 @@
 
          <div class="nine columns main-col">
 
-            <p>
+            <!-- <p>
            
                Enthuasiastic software engineer with 4 years of exprience participating in the complete product developement lifecycle of successful launched application
                I am   on devops , mobile UI design and cross paltform mobile app developement,
                as well as backend developer . 
-            </p>
+            </p> -->
 
 				<div class="bars">
 
